# mles-rs

./: Dockerfile  Mayhemfile  mles_fuzz_decode.mayhemfile  mles_fuzz_decode_combined.mayhemfile  mles_fuzz_msg_decode.mayhemfile
.github/workflows/: mayhem.yml  sync.yaml  sync.yml
mles-client/: Cargo.toml
mles-client/src/: main.rs  ws.rs
mles-utils/: Cargo.toml
mles-utils/src/: lib.rs  local_db.rs  peer.rs  server.rs
