[package]
name = "mles-client"
version = "1.2.0"
authors = ["jq-rs"]
edition = "2018"

description = "Mles-client, a distributed data protocol example (chat) client/ws-proxy"
license = "MPL-2.0"
repository = "https://github.com/jq-rs/mles-rs"
documentation = "http://mles.io"
readme = "../README.md"
categories = ["network-programming"]
keywords = ["protocol", "publish", "subscribe", "mles", "websocket"]

[profile.release]
lto = true

[dependencies]
mles-utils = "1.1"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["full"] }
#tokio-codec = "0.1"
bytes = "0.5"
tokio-proto = "0.1"
tokio-service = "0.1"
tungstenite = "0.6"
tokio-tungstenite = "0.6"

[badges]
travis-ci = { repository = "jq-rs/mles-rs" }
appveyor = { repository = "jq-rs/mles-rs" }
